# MCP-Workshop-Demo

./: .gitignore  README.md  pyproject.toml
mcp_client/: __init__.py  client.py  client_demo.py  client_demo_filled.py
mcp_server/: __init__.py  server.py  server_demo.py  server_demo_filled.py
todoapp/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py  todos.db
todoapp/static/: app.js  index.html  style.css
